--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,6 +88,12 @@
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/authors/authors-dialog.controller.js"></script>
+    <script src="app/entities/authors/authors-detail.controller.js"></script>
+    <script src="app/entities/authors/authors-delete-dialog.controller.js"></script>
+    <script src="app/entities/authors/authors.state.js"></script>
+    <script src="app/entities/authors/authors.service.js"></script>
+    <script src="app/entities/authors/authors.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort-by.directive.js"></script>
