Wygenerowany entity books

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,6 +88,12 @@
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
+    <script src="app/entities/books/books-dialog.controller.js"></script>
+    <script src="app/entities/books/books-detail.controller.js"></script>
+    <script src="app/entities/books/books-delete-dialog.controller.js"></script>
+    <script src="app/entities/books/books.state.js"></script>
+    <script src="app/entities/books/books.service.js"></script>
+    <script src="app/entities/books/books.controller.js"></script>
     <script src="app/entities/authors/authors-dialog.controller.js"></script>
     <script src="app/entities/authors/authors-detail.controller.js"></script>
     <script src="app/entities/authors/authors-delete-dialog.controller.js"></script>
