Zmiany w id books i authors

--- a/src/main/webapp/app/entities/books/books-detail.html
+++ b/src/main/webapp/app/entities/books/books-detail.html
@@ -4,10 +4,6 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="dl-horizontal jh-entity-details">
-        <dt><span>Id Book</span></dt>
-        <dd>
-            <span>{{vm.books.idBook}}</span>
-        </dd>
         <dt><span>Title</span></dt>
         <dd>
             <span>{{vm.books.title}}</span>
@@ -31,6 +27,14 @@
         <dt><span data-translate="kundelApp.books.url_l">Url L</span></dt>
         <dd>
             <span>{{vm.books.url_l}}</span>
+        </dd>
+        <dt><span>Author</span></dt>
+        <dd>
+            <span>{{vm.books.author}}</span>
+        </dd>
+        <dt><span>Publisher</span></dt>
+        <dd>
+            <span>{{vm.books.publisher}}</span>
         </dd>
     </dl>
 
