--- a/src/main/webapp/app/entities/books/books-dialog.html
+++ b/src/main/webapp/app/entities/books/books-dialog.html
@@ -14,12 +14,6 @@
                     ng-model="vm.books.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" for="field_idBook">Id Book</label>
-            <input type="number" class="form-control" name="idBook" id="field_idBook"
-                    ng-model="vm.books.idBook"
-                     />
-        </div>
-        <div class="form-group">
             <label class="control-label" for="field_title">Title</label>
             <input type="text" class="form-control" name="title" id="field_title"
                     ng-model="vm.books.title"
@@ -53,6 +47,18 @@
             <label class="control-label" data-translate="kundelApp.books.url_l" for="field_url_l">Url L</label>
             <input type="text" class="form-control" name="url_l" id="field_url_l"
                     ng-model="vm.books.url_l"
+                     />
+        </div>
+        <div class="form-group">
+            <label class="control-label" for="field_author">Author</label>
+            <input type="number" class="form-control" name="author" id="field_author"
+                    ng-model="vm.books.author"
+                     />
+        </div>
+        <div class="form-group">
+            <label class="control-label" for="field_publisher">Publisher</label>
+            <input type="number" class="form-control" name="publisher" id="field_publisher"
+                    ng-model="vm.books.publisher"
                      />
         </div>
 
