--- a/src/main/webapp/app/entities/books/books.html
+++ b/src/main/webapp/app/entities/books/books.html
@@ -19,26 +19,28 @@
             <thead>
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                     <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="idBook"><span>Id Book</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="title"><span>Title</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="isbn"><span>Isbn</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="year"><span>Year</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="url_s"><span data-translate="kundelApp.books.url_s">Url S</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="url_m"><span data-translate="kundelApp.books.url_m">Url M</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="url_l"><span data-translate="kundelApp.books.url_l">Url L</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="author"><span>Author</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="publisher"><span>Publisher</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="books in vm.books track by books.id">
                     <td><a ui-sref="books-detail({id:books.id})">{{books.id}}</a></td>
-                    <td>{{books.idBook}}</td>
                     <td>{{books.title}}</td>
                     <td>{{books.isbn}}</td>
                     <td>{{books.year}}</td>
                     <td>{{books.url_s}}</td>
                     <td>{{books.url_m}}</td>
                     <td>{{books.url_l}}</td>
+                    <td>{{books.author}}</td>
+                    <td>{{books.publisher}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
