Co za glupi mongoudibi

--- a/src/main/webapp/app/entities/books/books-detail.html
+++ b/src/main/webapp/app/entities/books/books-detail.html
@@ -30,11 +30,15 @@
         </dd>
         <dt><span>Author</span></dt>
         <dd>
-            <span>{{vm.books.author}}</span>
+            <span>{{vm.authors.name}}</span>
         </dd>
         <dt><span>Publisher</span></dt>
         <dd>
             <span>{{vm.books.publisher}}</span>
+        </dd>
+        <dt><span>Id Book</span></dt>
+        <dd>
+            <span>{{vm.books.idBook}}</span>
         </dd>
     </dl>
 
