--- a/src/main/webapp/app/entities/books/books-dialog.html
+++ b/src/main/webapp/app/entities/books/books-dialog.html
@@ -61,6 +61,12 @@
                     ng-model="vm.books.publisher"
                      />
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_idBook">Id Book</label>
+            <input type="number" class="form-control" name="idBook" id="field_idBook"
+                    ng-model="vm.books.idBook"
+                     />
+        </div>
 
     </div>
     <div class="modal-footer">
