--- a/src/main/webapp/app/entities/books/books.html
+++ b/src/main/webapp/app/entities/books/books.html
@@ -27,6 +27,7 @@
                     <th jh-sort-by="url_l"><span data-translate="kundelApp.books.url_l">Url L</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="author"><span>Author</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="publisher"><span>Publisher</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="idBook"><span>Id Book</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -41,6 +42,7 @@
                     <td>{{books.url_l}}</td>
                     <td>{{books.author}}</td>
                     <td>{{books.publisher}}</td>
+                    <td>{{books.idBook}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
