--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,6 +94,12 @@
     <script src="app/entities/books/books.state.js"></script>
     <script src="app/entities/books/books.service.js"></script>
     <script src="app/entities/books/books.controller.js"></script>
+    <script src="app/entities/book/book-dialog.controller.js"></script>
+    <script src="app/entities/book/book-detail.controller.js"></script>
+    <script src="app/entities/book/book-delete-dialog.controller.js"></script>
+    <script src="app/entities/book/book.state.js"></script>
+    <script src="app/entities/book/book.service.js"></script>
+    <script src="app/entities/book/book.controller.js"></script>
     <script src="app/entities/authors/authors-dialog.controller.js"></script>
     <script src="app/entities/authors/authors-detail.controller.js"></script>
     <script src="app/entities/authors/authors-delete-dialog.controller.js"></script>
