--- a/src/main/webapp/app/account/register/register.html
+++ b/src/main/webapp/app/account/register/register.html
@@ -1,128 +1,122 @@
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1>Rejestracja</h1>
+            <h1>Registration</h1>
 
             <div class="alert alert-success" ng-show="vm.success">
-                <strong>Rejestracja udana!</strong> Sprawdź swoją skrzynkę pocztową wysłaliśmy Ci maila
-                potwierdzającego założenie konta.
+                <strong>Registration saved!</strong> Please check your email for confirmation.
             </div>
 
             <div class="alert alert-danger" ng-show="vm.error">
-                <strong>Rejestracja niepowiodła się!</strong> Proszę spróbować ponownie.
+                <strong>Registration failed!</strong> Please try again later.
             </div>
 
             <div class="alert alert-danger" ng-show="vm.errorUserExists">
-                <strong>Nazwa użytkownika jest już zajęcta!</strong> Proszę wybrać inną.
+                <strong>Login name already registered!</strong> Please choose another one.
             </div>
 
             <div class="alert alert-danger" ng-show="vm.errorEmailExists">
-                <strong>E-mail jest już zajęty!</strong> Proszę wybrać inny.
+                <strong>E-mail is already in use!</strong> Please choose another one.
             </div>
 
             <div class="alert alert-danger" ng-show="vm.doNotMatch">
-                Hasło i powtórzone hasło są różne! Wpisz ponownie.
+                The password and its confirmation do not match!
             </div>
         </div>
         <div class="col-md-8 col-md-offset-2">
             <form ng-show="!vm.success" name="form" role="form" novalidate ng-submit="vm.register()" show-validation>
 
                 <div class="form-group">
-                    <label class="control-label" for="login">Nazwa użytkownika</label>
-                    <input type="text" class="form-control" id="login" name="login" placeholder="Twój login"
+                    <label class="control-label" for="login">Username</label>
+                    <input type="text" class="form-control" id="login" name="login" placeholder="Your username"
                            ng-model="vm.registerAccount.login" ng-minlength=1 ng-maxlength=50 ng-pattern="/^[_'.@A-Za-z0-9-]*$/" required>
                     <div ng-show="form.login.$dirty && form.login.$invalid">
                         <p class="help-block"
-                               ng-show="form.login.$error.required">
-                            Nazwa użytkownika jest wymagana.
+                           ng-show="form.login.$error.required">
+                            Your username is required.
                         </p>
                         <p class="help-block"
-                               ng-show="form.login.$error.minlength">
-                            Nazwa użytkownika musi mieć przynajmniej 1 znak
+                           ng-show="form.login.$error.minlength">
+                            Your username is required to be at least 1 character.
                         </p>
                         <p class="help-block"
-                               ng-show="form.login.$error.maxlength">
-                            Nazwa użytkownika nie może być dluższa niż 50 znaków.
+                           ng-show="form.login.$error.maxlength">
+                            Your username cannot be longer than 50 characters.
                         </p>
                         <p class="help-block"
-                               ng-show="form.login.$error.pattern">
-                            Nazwa użytkownika może zawierać tylko małe litery i cyfry.
-                    </p>
+                           ng-show="form.login.$error.pattern">
+                            Your username can only contain lower-case letters and digits.
+                        </p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">E-mail</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Twój e-mail"
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Your e-mail"
                            ng-model="vm.registerAccount.email" ng-minlength=5 ng-maxlength=100 required>
                     <div ng-show="form.email.$dirty && form.email.$invalid">
                         <p class="help-block"
-                               ng-show="form.email.$error.required">
-                            E-mail jest wymagany.
+                           ng-show="form.email.$error.required">
+                            Your e-mail is required.
                         </p>
                         <p class="help-block"
-                               ng-show="form.email.$error.email">
-                            E-mail jest nieprawidłowy.
+                           ng-show="form.email.$error.email">
+                            Your e-mail is invalid.
                         </p>
                         <p class="help-block"
-                               ng-show="form.email.$error.minlength">
-                            E-mail musi mieć przynajmniej 5 znaków.
+                           ng-show="form.email.$error.minlength">
+                            Your e-mail is required to be at least 5 characters.
                         </p>
                         <p class="help-block"
-                               ng-show="form.email.$error.maxlength">
-                            E-mail nie może być dluższy niż 100 znaków.
+                           ng-show="form.email.$error.maxlength">
+                            Your e-mail cannot be longer than 100 characters.
                         </p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="password">Nowe hasło</label>
-                    <input type="password" class="form-control" id="password" name="password"
-                           placeholder="Nowe hasło 4-50 znaków"
+                    <label class="control-label" for="password">New password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="New password"
                            ng-model="vm.registerAccount.password" ng-minlength=4 ng-maxlength=50 required>
                     <div ng-show="form.password.$dirty && form.password.$invalid">
                         <p class="help-block"
-                               ng-show="form.password.$error.required">
-                            Hasło jest wymagane.
+                           ng-show="form.password.$error.required">
+                            Your password is required.
                         </p>
                         <p class="help-block"
-                               ng-show="form.password.$error.minlength">
-                            Hasło musi mieć długość przynajmniej 4 znaków.
+                           ng-show="form.password.$error.minlength">
+                            Your password is required to be at least 4 characters.
                         </p>
                         <p class="help-block"
-                               ng-show="form.password.$error.maxlength">
-                            Hasło nie może być dłuższe niż 50 znaków.
+                           ng-show="form.password.$error.maxlength">
+                            Your password cannot be longer than 50 characters.
                         </p>
                     </div>
                     <password-strength-bar password-to-check="vm.registerAccount.password"></password-strength-bar>
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="confirmPassword">Potwierdzenie nowego hasła</label>
-                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"
-                           placeholder="Powtórz swoje hasło"
+                    <label class="control-label" for="confirmPassword">New password confirmation</label>
+                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm the new password"
                            ng-model="vm.confirmPassword" ng-minlength=4 ng-maxlength=50 required>
                     <div ng-show="form.confirmPassword.$dirty && form.confirmPassword.$invalid">
                         <p class="help-block"
-                               ng-show="form.confirmPassword.$error.required">
-                            Powtórzenie hasła jest wymagane.
+                           ng-show="form.confirmPassword.$error.required">
+                            Your confirmation password is required.
                         </p>
                         <p class="help-block"
-                               ng-show="form.confirmPassword.$error.minlength">
-                            Powtórzone hasło nie może być krótsze niż 4 znaki.
+                           ng-show="form.confirmPassword.$error.minlength">
+                            Your confirmation password is required to be at least 4 characters.
                         </p>
                         <p class="help-block"
-                               ng-show="form.confirmPassword.$error.maxlength">
-                            Powtórzone hasło nie może być dłuższe niż 50 znaki.
+                           ng-show="form.confirmPassword.$error.maxlength">
+                            Your confirmation password cannot be longer than 50 characters.
                         </p>
                     </div>
                 </div>
 
-                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Rejestracja</button>
+                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Register</button>
             </form>
             <p></p>
             <div class="alert alert-warning">
-                Jeśli chcesz <a class="alert-link" href="" ng-click="vm.login()">zalogować się</a>, ymożesz
-                spróbować użyć domyślnych kont:<br/>- Administrator (login="admin" and hasło="admin") <br/>-
-                Użytkownika
-                (login="user" and hasło="user").
+                If you want to <a class="alert-link" href="" ng-click="vm.login()">sign in</a>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").
             </div>
         </div>
     </div>
