--- a/src/main/webapp/app/entities/transaction/transaction-detail.html
+++ b/src/main/webapp/app/entities/transaction/transaction-detail.html
@@ -1,28 +1,42 @@
-
-<div>
-    <h2><span>Transaction</span> {{vm.transaction.id}}</h2>
+<div class="cover-img">
+    <span><img src="{{vm.transaction.book.url_l}}" /></span>
+</div>
+<div class="content-block">
+    <h2>{{vm.transaction.book.title}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="dl-horizontal jh-entity-details">
-        <dt><span>Id Book</span></dt>
+        <dt><span>Author</span></dt>
         <dd>
-            <span>{{vm.transaction.idBook}}</span>
+            <span>{{vm.transaction.book.author}}</span>
         </dd>
-        <dt><span>Id User</span></dt>
+        <dt><span>Publisher</span></dt>
         <dd>
-            <span>{{vm.transaction.idUser}}</span>
+            <span>{{vm.transaction.book.publisher}}</span>
         </dd>
-        <dt><span>Date Start</span></dt>
+        <dt><span>Year of publication</span></dt>
+        <dd>
+            <span>{{vm.transaction.book.year}}</span>
+        </dd>
+        <dt><span>Isbn</span></dt>
+        <dd>
+            <span>{{vm.transaction.book.isbn}}</span>
+        </dd>
+        <dt><span>Purchase date</span></dt>
         <dd>
             <span>{{vm.transaction.dateStart | date:'mediumDate'}}</span>
         </dd>
-        <dt><span>Date End</span></dt>
+        <dt><span>Expiration date</span></dt>
         <dd>
             <span>{{vm.transaction.dateEnd | date:'mediumDate'}}</span>
         </dd>
+        <dt><span>Owner</span></dt>
+        <dd>
+            <span>{{vm.transaction.user.firstName}} {{vm.transaction.user.lastName}}</span>
+        </dd>
         <dt><span>Price</span></dt>
         <dd>
-            <span>{{vm.transaction.price}}</span>
+            <span>{{vm.transaction.price | currency:"€"}}</span>
         </dd>
     </dl>
 
@@ -32,8 +46,19 @@
         <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span> Back</span>
     </button>
 
-    <button type="button" ui-sref="transaction-detail.edit({id:vm.transaction.id})" class="btn btn-primary">
+    <button type="button"
+            ui-sref="transaction-detail.edit({id:vm.transaction.id})"
+            class="btn btn-primary">
+        <span class="glyphicon glyphicon-book"></span>
+        <span class="hidden-xs hidden-sm"> Read book</span>
+    </button>
+
+    <button type="button"
+            ui-sref="transaction-detail.edit({id:vm.transaction.id})"
+            class="btn btn-primary"
+            has-authority="ROLE_ADMIN">
         <span class="glyphicon glyphicon-pencil"></span>
         <span class="hidden-xs hidden-sm"> Edit</span>
     </button>
 </div>
+<div class="clear-block"></div>
