--- a/src/main/webapp/app/entities/transaction/transactions.html
+++ b/src/main/webapp/app/entities/transaction/transactions.html
@@ -1,57 +1,51 @@
 <div>
     <h2>Transactions</h2>
     <jhi-alert></jhi-alert>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="transaction.new" >
-                    <span class="glyphicon glyphicon-plus"></span>
-                    <span >
-                        Create new Transaction
-                    </span>
-                </button>
-            </div>
-        </div>
-    </div>
+
     <br/>
     <div class="table-responsive">
         <table class="jh-table table table-striped">
             <thead>
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
-                    <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="idBook"><span>Id Book</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="idUser"><span>Id User</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="dateStart"><span>Date Start</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="dateEnd"><span>Date End</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="id"><span></span> </th>
+                    <th jh-sort-by="idBook"><span>Book title</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="idUser" has-authority="ROLE_ADMIN"><span>Owner</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="dateStart"><span>Purchase date</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="dateEnd"><span>Expiration date</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="price"><span>Price</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="status"><span>Status</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="transaction in vm.transactions track by transaction.id">
-                    <td><a ui-sref="transaction-detail({id:transaction.id})">{{transaction.id}}</a></td>
-                    <td>{{transaction.idBook}}</td>
-                    <td>{{transaction.idUser}}</td>
-                        <td>{{transaction.dateStart | date:'mediumDate'}}</td>
-                        <td>{{transaction.dateEnd | date:'mediumDate'}}</td>
+                <tr ng-repeat="transaction in vm.transactions track by transaction.id" ng-show="transaction.user.login == vm.account.login || vm.account.authorities[1] == 'ROLE_ADMIN'">
+                    <td><img src="{{transaction.book.url_s}}" /></td>
+                    <td>{{transaction.book.title}}</td>
+                    <td has-authority="ROLE_ADMIN">{{transaction.user.login}}</td>
+                    <td>{{transaction.dateStart | date:'mediumDate'}}</td>
+                    <td>{{transaction.dateEnd | date:'mediumDate'}}</td>
                     <td>{{transaction.price}}</td>
+                    <td>{{transaction.status}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="transaction-detail({id:transaction.id})"
-                                    class="btn btn-info btn-sm">
+                                    class="btn btn-info btn-sm"
+                                    ng-show="transaction.status == true">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="transaction.edit({id:transaction.id})"
-                                    class="btn btn-primary btn-sm">
+                                    class="btn btn-primary btn-sm"
+                                    has-authority="ROLE_ADMIN">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="transaction.delete({id:transaction.id})"
-                                    class="btn btn-danger btn-sm">
+                                    class="btn btn-danger btn-sm"
+                                    has-authority="ROLE_ADMIN">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
@@ -61,7 +55,7 @@
             </tbody>
         </table>
     </div>
-    <div class="text-center">
+    <div class="text-center" has-authority="ROLE_ADMIN">
         <jhi-item-count page="vm.page" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
     </div>
     <uib-pager total-items="vm.totalItems" ng-model="vm.page" ng-change="vm.transition()"></uib-pager>
